<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Silence!</string>
    <string name="app_name">Silence</string>
    <string name="day_prompt">Day To Edit</string>
    <string name="ring_prompt">Ring</string>
	<string name="spacing20">                    </string>
	<string name="defaultstart">2</string>
	<string name="defaultend">3</string>
	<string name="defaultmins">00</string>
	<string name="sundayAbr">Sun</string>
	<string name="nullstring">NULL</string>
	<string name="weekViewSpace">"                                       "</string>
	<string name="keyTextView">"Key: "</string>
	<string name="silentTextView">"      Silent      "</string>
	<string name="vibrateTextView2">"      Vibrate      "</string>
	<string name="normalTextView">"      Normal      "</string>
	<string name="startTimeTextView">"Start Time: "</string>
	<string name="eventNameTextView">Event Name:</string>
	<string name="nameDefaultTextBox">Name</string>
	<string name="endTimeTextView">End Time:</string>
	<string name="soundTextView">"Sound: "</string>
	<string name="deleteButtonText">Delete</string>
	<string name="enableDisableButtonText">Enable / Disable</string>
	<string name="saveButtonText">"    Save    "</string>
</resources>