<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >





    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventNameTextView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameDefaultTextBox" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/sunToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Sun"
            android:textOn="Sun" />

        <ToggleButton
            android:id="@+id/monToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Mon"
            android:textOn="Mon" />

        <ToggleButton
            android:id="@+id/tueToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Tue"
            android:textOn="Tue" />

        <ToggleButton
            android:id="@+id/wedToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Wed"
            android:textOn="Wed" />

        <ToggleButton
            android:id="@+id/thuToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Thu"
            android:textOn="Thu" />

        <ToggleButton
            android:id="@+id/friToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Fri"
            android:textOn="Fri" />

        <ToggleButton
            android:id="@+id/satToggle"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/nullstring"
            android:textOff="Sat"
            android:textOn="Sat" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/startTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTimeTextView"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/startHour"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:numeric="integer"
                    android:inputType="number"
                    android:text="@string/defaultstart" />

                <EditText
                    android:id="@+id/startMinute"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:numeric="integer"
                    android:inputType="number"
                    android:text="@string/defaultmins" >

                    <requestFocus />
                </EditText>

                <Spinner
                    android:id="@+id/startSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:entries="@array/ampm" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/endTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endTimeTextView"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                

                    <EditText
                        android:id="@+id/endHour"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:numeric="integer"
                        android:inputType="number"
                        android:text="@string/defaultend" />

                    <EditText
                        android:id="@+id/endMinute"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:numeric="integer"
                        android:inputType="number"
                        android:text="@string/defaultmins" />

                    <Spinner
                        android:id="@+id/endSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:entries="@array/ampm" />
                </LinearLayout>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ringerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soundTextView"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/ringSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ringType"
                android:prompt="@string/ring_prompt" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15.92" >
        </TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/deleteEventButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteButtonText" />

            </LinearLayout>

            <Button
                android:id="@+id/disableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15.92"
                android:text="@string/enableDisableButtonText" />

            <Button
                android:id="@+id/editEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveButtonText" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.41"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>